# ray-tracing-engine

./: CMakeLists.txt  README.md  example.off
meshes/: cube_tri.off  cube_tri2.off  example_cube.off  example_low_res.off
source/: AABB.cpp  AABB.h  BVH.h  Camera.h  CommandLine.h  Image.cpp  Image.h  LightSource.h  Main.cpp  Material.h  Mesh.h  Particle.h  ParticleMap.h  PhotonMap.h  Ray.cpp  Ray.h  RayTracer.h  Renderer.cpp  Renderer.h  Scene.h  Vec3.h  kdtree.h
